fixed the alignment issue with the api call results

--- a/src/client/styles/_mixings.scss
+++ b/src/client/styles/_mixings.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-items: center;
     flex-direction: $direction;
-    margin: $margin,
+    margin: $margin;
 }
 
 
